[package]
name = "bcl-ward"
version = "0.1.1"
edition = "2021"
description = "Claude Code hook CLI — PII guard, leak detection, event logging"
license = "MIT"
repository = "https://github.com/Battle-Creek-LLC/ward"
readme = "README.md"
keywords = ["claude-code", "pii", "secrets", "hook", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "ward"
path = "src/lib.rs"

[[bin]]
name = "ward"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
